--- a/path/app/Resources/FOSUserBundle/views/Security/login.html.twig
+++ b/path/app/Resources/FOSUserBundle/views/Security/login.html.twig
@@ -1,20 +1,36 @@
-{% for flashMessage in app.session.flashbag.get('error') %}
-    <div class="flash notice">
-        {{ flashMessage }}
-    </div>
-{% endfor %}
-
-<form action="{{ path("fos_user_security_check") }}" method="post" id="login-form">
-    <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
-
-    <label for="username">{{ 'security.login.username'|trans({}, 'FOSUserBundle') }}</label>
-    <input type="text" id="username" name="_username" value="{{ last_username }}" required="required" />
-
-    <label for="password">{{ 'security.login.password'|trans({}, 'FOSUserBundle') }}</label>
-    <input type="password" id="password" name="_password" required="required" />
-
-    <input type="checkbox" id="remember_me" name="_remember_me" value="on" />
-    <label for="remember_me">{{ 'security.login.remember_me'|trans({}, 'FOSUserBundle') }}</label>
-
-    <input type="submit" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans({}, 'FOSUserBundle') }}" />
-</form>
+<div class="modal" id="login_modal">
+    <div class="close"></div>
+    <div class="title">Войти в офис</div>
+    <!--<div class="social">
+        <a href="" class="vk">Войти через VK</a>
+        <a href="" class="fb">Войти через FB</a>
+    </div>-->
+    <form class="modal_form" action="{{ path("fos_user_security_check") }}" method="post" id="login-form">
+        <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
+        <div class="control_point">
+            <label for="username">{{ 'security.login.username'|trans({}, 'FOSUserBundle') }}</label>
+            <input type="text" placeholder="Логин" id="username" name="_username" value="{{ last_username }}" required="required"/>
+            <div class="shadow_box"><span class="user"></span></div>
+            <div class="success ico"></div>
+            <div class="error ico"></div>
+            <div class="error_text">Текст ошибки</div>
+        </div>
+        <div class="control_point">
+            <label for="password">{{ 'security.login.password'|trans({}, 'FOSUserBundle') }}</label>
+            <input type="password" placeholder="Пароль" id="password" name="_password" required="required" />
+            <div class="shadow_box"><span class="kee"></span></div>
+            <div class="success ico"></div>
+            <div class="error ico"></div>
+            <div class="error_text">Текст ошибки</div>
+        </div>
+        <div class="control_point remember_point">
+            <input type="checkbox" class="styled" id="remember_me" name="_remember_me" value="on" />
+            <label class="check_label" for="remember_me">{{ 'security.login.remember_me'|trans({}, 'FOSUserBundle') }}</label>
+        </div>
+        <div class="right_part">
+            <a href="#" class="forget_pass">Забыли пароль!?</a>
+            <input class="green_button" type="submit" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans({}, 'FOSUserBundle') }}" />
+        </div>
+        <div style="clear: both;"></div>
+    </form>
+</div>
